force-app/main/default/objects/Laptop_Bookings__c/Laptop_Bookings__c.object-meta.xml
<CustomObject>
    <label>Laptop Bookings</label>
    <nameField>
        <label>Laptop Bookings</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Laptop Bookings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>