force-app/main/default/objects/Laptop_Bookings__c/fields/Laptop_type__c.field-meta.xml
<CustomField>
    <fullName>Laptop_type__c</fullName>
    <label>Laptop names</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dell</fullName>
            </value>
            <value>
                <fullName>Acer</fullName>
            </value>
            <value>
                <fullName>Hp</fullName>
            </value>
            <value>
                <fullName>Mac</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>