force-app/main/default/objects/Laptop_Bookings__c/fields/Total_Laptops__c.field-meta.xml
<CustomField>
    <fullName>Total_Laptops__c</fullName>
    <label>Total No Of Laptops</label>
    <referenceTo>Total_Laptops__c</referenceTo>
    <relationshipLabel>Laptop Bookings</relationshipLabel>
    <relationshipName>Laptop_Bookings</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>