force-app/main/default/objects/Laptop_Bookings__c/recordTypes/abhi.recordType-meta.xml
<RecordType>
    <fullName>abhi</fullName>
    <active>true</active>
    <description>no</description>
    <label>abhi</label>
</RecordType>